--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
-    "pagepiling.js": "^1.5.6"
+    "pagepiling.js": "^1.5.6",
+    "parallax-js": "^3.1.0"
   }
 }
