--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
+    "imask": "^6.2.0",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
+    "nouislider": "^15.4.0",
     "pagepiling.js": "^1.5.6",
-    "parallax-js": "^3.1.0"
+    "parallax-js": "^3.1.0",
+    "wnumb": "^1.2.0"
   }
 }
